--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <header>
         <img src="search.png" alt="cabecalho logo">
     </header>
-    <h1>HTML</h1>
-    <h2> o que é</h2>
-    <h3>html é uma linguaguem de marcação utilizada em páginas web</h3>
+    <h1>Página sobre HTML</h1>
+    <h2> o que é HTML: </h2>
+    <h3>HTML (HyperText Markup Language) é a linguagem de marcação usada para criar páginas da web. Com HTML, você pode estruturar conteúdo, inserir links, imagens, vídeos e muito mais.</h3>
     <a href="sobre.html" class="button">curriculo</a>
     <a href="endereco.html" class="button">Endereço</a>
 </body>
