--- a/sobre.html
+++ b/sobre.html
@@ -41,8 +41,8 @@
     </div>
     <div id="main-content">
         <h2>Dados Pessoais</h2>
-        <img id="profile-image" src="3x4.jpg" alt="Foto de Perfil">
-        <p>Nome: Seu Nome</p>
+        <img id="profile-image" src="oni.jpg" alt="Foto de Perfil">
+        <p>Nome: Gabriel da Silva</p>
         <p>E-mail: seuemail@example.com</p>
         <p>Telefone: (123) 456-7890</p>
 
