--- a/endereco.html
+++ b/endereco.html
@@ -29,12 +29,60 @@
     </style>
 </head>
 <body>
-    <h1><big>HTML</big> <br> História</h1>
-    <p> <b>O HTML foi criado por: <br>Tim Berners-lee</b> </p>
-    <h2> <i>Essa linguagem foi criada em</i> <big>1989</big></h2>
-    <p> <s>Uma das primeiras funçõe das páginas web era apresentar currículos online de integrantes de universidades e centros de pesquisa americanos.</s></p>
-    <h3> <u>Referência:</u>< 
-        <a href="http://www.pads.ufrj.br/~valentin/Tutorial_HTML/html/historia.html#:~:text=A%20linguagem%20HTML%20foi%20desenvolvida,e%20centros%20de%20pesquisa%20americanos."</a>
-        <a href="index.html" class="button">Voltar para a Home</a>
+    <h1><big>Exemplo de Tags</big> <br> História</h1>
+    <div class="container">
+        <h1>Exemplos Práticos de Tags HTML</h1>
+
+        <!-- Tag <img> para exibir uma imagem -->
+        <img src="https://via.placeholder.com/400x200" alt="Imagem de exemplo">
+
+        <!-- Tag <table> para exibir uma tabela -->
+        <table border="1" cellspacing="0" cellpadding="10" align="center">
+            <tr>
+                <th>Nome</th>
+                <th>Idade</th>
+                <th>Cidade</th>
+            </tr>
+            <tr>
+                <td>Ana</td>
+                <td>28</td>
+                <td>São Paulo</td>
+            </tr>
+            <tr>
+                <td>João</td>
+                <td>35</td>
+                <td>Rio de Janeiro</td>
+            </tr>
+        </table>
+
+        <!-- Tag <ul> para exibir uma lista não ordenada -->
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+
+        <!-- Tag <form> para criar um formulário -->
+        <form action="#" method="POST">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome">
+            <br><br>
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email">
+            <br><br>
+            <button type="submit">Enviar</button>
+        </form>
+
+        <!-- Tag <video> para exibir um vídeo -->
+        <video width="320" height="240" controls>
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+            Seu navegador não suporta a tag de vídeo.
+        </video>
+
+        <br><br>
+        <button onclick="window.location.href='index.html'">Voltar para Página 1</button>
+        <button onclick="window.location.href='pagina2.html'">Ir para Página 2</button>
+    </div>
+    <a href="index.html" class="button">Voltar para a Home</a>
 </body>
 </html>
