--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <h2> o que é HTML: </h2>
     <h3>HTML (HyperText Markup Language) é a linguagem de marcação usada para criar páginas da web. Com HTML, você pode estruturar conteúdo, inserir links, imagens, vídeos e muito mais.</h3>
     <a href="sobre.html" class="button">curriculo</a>
-    <a href="endereco.html" class="button">Endereço</a>
+    <a href="endereco.html" class="button">Página 3</a>
 </body>
 </html>
