--- a/endereco.html
+++ b/endereco.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <h1><big>Exemplo de Tags</big> <br> História</h1>
+    <h1><big>Exemplo de Tags</big></h1>
     <div class="container">
         <h1>Exemplos Práticos de Tags HTML</h1>
 
